# augo

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README.zh-CN.md  README_EN.md  RELEASE_NOTES_0.1.0-alpha.md  SECURITY.md  docker-compose.yml
client/: .gitignore  (+4 more)
server/: .env.example  .gitignore  Dockerfile  alembic.ini  manage.sh  pyproject.toml
server/alembic/: README.md  env.py
server/alembic/versions/: 0001_extensions.py  0002_create_users.py  0003_create_sessions.py  0004_create_storage.py  0005_create_financial_accounts.py  0006_create_transactions.py  0007_create_budgets.py  0008_create_shared_spaces.py  0009_create_notifications.py  0010_create_searchable_messages.py  0011_create_forecast_tables.py  0012_create_financial_settings.py  0013_stored_procedures.py  010_add_forecast_tables.py
server/app/: main.py
server/app/api/: budget.py
server/app/api/v1/: api.py  auth.py  chatbot.py  exchange_rate.py  financial_settings.py  home.py  memory.py  notification.py  shared_space.py  statistics.py  storage_config.py  transaction.py  upload.py  user.py
server/app/core/: background_tasks.py  cache.py  config.py  database.py  dependencies.py  exceptions.py  genui_protocol.py  limiter.py  logging.py  metrics.py  middleware.py  pagination.py  permissions.py  query_optimization.py  responses.py  service_deps.py
server/app/core/constants/: semantic_constants.py  transaction_constants.py
server/app/core/genui/: __init__.py  enricher.py  persistent_surface_tracker.py  surface_tracker.py
server/app/core/langgraph/: simple_agent.py
server/app/core/langgraph/agent/: __init__.py  edges.py  graph.py  nodes.py  state.py
server/app/core/langgraph/middleware/: __init__.py  attachment.py  base.py  context.py  memory.py  skill.py  skill_constraint.py  state_validator.py
server/app/core/langgraph/stream/: __init__.py  component_detector.py  event_generator.py  processor.py  render_policy.py  text_filter_policy.py
server/app/core/langgraph/tools/: __init__.py  budget_tools.py  context.py  filesystem_tools.py  memory_tools.py  skill_tools.py  space_association_tools.py  tool_metadata.py  transaction_tools.py  transfer_tools.py  utils.py
server/app/core/prompts/: __init__.py  system.md
server/app/core/skills/: loader.py
server/app/models/: __init__.py  attachment.py  base.py  budget.py  database.py  financial_account.py  financial_settings.py  forecast.py  genui_surface.py  notification.py  searchable_message.py  session.py  shared_space.py  storage_config.py  transaction.py  user.py  user_settings.py
server/app/schemas/: auth.py  budget.py  chat.py  client_state.py  conversation.py  genui.py  graph.py  notification.py  search.py  shared_space.py  statistics.py  transaction.py  user.py
server/app/services/: __init__.py  account_service.py  attachment_processor.py  auth_service.py  budget_service.py  code_manager.py  database.py  exchange_rate_service.py  forecast_service.py  history_service.py  llm.py  memory_cleanup_jobs.py  message_index_service.py  recurring_transaction_jobs.py  scheduler.py  scheduler_service.py  search_service.py  shared_space_service.py  statistics_service.py  storage_config_service.py  title_service.py  transaction_query_service.py  transaction_service.py  upload_service.py  user_service.py
server/app/services/enrichers/: transaction_enricher.py
server/app/services/memory/: __init__.py  memory_service.py  memory_service_property.txt
server/app/services/storage/: __init__.py
server/app/services/storage/adapters/: __init__.py  base.py  factory.py  local.py  s3.py  webdav.py
server/app/services/transaction/: __init__.py  cash_flow_service.py  crud_service.py  query_service.py  recurring_service.py
server/app/skills/budget-expert/scripts/: analyze_budget.py
server/app/skills/budget-planner/: SKILL.md
server/app/skills/budget-planner/scripts/: suggest_budget.py
server/app/skills/cashflow-analyst/: SKILL.md
server/app/skills/cashflow-analyst/scripts/: analyze_cashflow.py
server/app/skills/community/frontend-design/: SKILL.md
server/app/skills/executing-transfers/: SKILL.md
server/app/skills/executing-transfers/scripts/: prepare_transfer.py
server/app/skills/financial-forecaster/: SKILL.md
server/app/skills/financial-forecaster/scripts/: forecast_balance.py
server/app/skills/forecasting-finances/: SKILL.md
server/app/skills/forecasting-finances/scripts/: forecast_balance.py
server/app/skills/managing-shared-ledgers/: SKILL.md
server/app/skills/managing-shared-ledgers/scripts/: list_spaces.py  query_space_summary.py
server/app/skills/planning-budgets/scripts/: suggest_budget.py
server/app/skills/reviewing-finances/: SKILL.md
server/app/skills/reviewing-finances/scripts/: analyze_cashflow.py  analyze_spending.py
server/app/skills/shared-space/scripts/: list_spaces.py  query_space_summary.py
server/app/skills/spending-analyzer/: SKILL.md
server/app/skills/spending-analyzer/scripts/: analyze_spending.py
server/app/skills/transfer-expert/scripts/: prepare_transfer.py
server/app/utils/: auth.py  currency_utils.py  encryption.py  graph.py  sanitization.py  timezone.py  types.py
server/docs/: DATABASE_MIGRATIONS.md  MEM0_INTEGRATION.md
server/evals/: evaluator.py  helpers.py  main.py
server/scripts/: bootstrap.py  build-docker.sh  check_db.py  check_redis.py  demo_reactive_genui.py  docker-entrypoint.sh  ensure-db-user.sh  logs-docker.sh  run-docker.sh  set_env.sh  show_qr.py  stop-docker.sh  test_datamodel_update.py
server/tests/: conftest.py
server/tests/integration/: test_memory_logic.py  test_sanity.py  test_transaction_api.py
server/tests/unit/: test_health.py  test_surface_tracker.py
server/tests/unit/langgraph/: test_graph.py  test_middleware.py  test_tools.py
server/tests/unit/services/: test_account_service.py  test_auth_security.py  test_auth_service.py  test_budget_service.py  test_forecast_service.py  test_memory_service.py  test_scheduler_service.py  test_transaction_service.py
(+454 files in other folders)
