[project]
name = "augo-api"
version = "0.1.0"
description = "Augo: Self-Hosted & Privacy-First AI Financial Assistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "langchain>=1.0.5",
    "langchain-core>=1.2.5",
    "langchain-openai>=1.0.2",
    "langfuse==3.9.1",
    "langgraph>=1.0.2",
    "langgraph-checkpoint-postgres>=3.0.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.1",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
    "structlog>=25.2.0",
    "supabase>=2.15.0",
    "uvicorn>=0.34.0",
    "bcrypt>=4.3.0",
    "slowapi>=0.1.9",
    "email-validator>=2.2.0",
    "prometheus-client>=0.19.0",
    "starlette-prometheus>=0.7.0",
    "asgiref>=3.8.1",
    "duckduckgo-search>=3.9.0",
    "langchain-community>=0.4.1",
    "tqdm>=4.67.1",
    "colorama>=0.4.6",
    "ddgs>=9.6.0",
    "tenacity>=9.1.2",
    "mem0ai>=1.0.0",
    "uvloop>=0.22.1",
    # Migration-specific dependencies
    "alembic>=1.13.0",
    "pillow>=10.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "apscheduler>=3.10.0",
    "python-dateutil>=2.8.2",
    "aiofiles>=23.2.1",
    "sqlalchemy[asyncio]>=2.0.40",
    "multidict==6.7.0",
    "fastapi-pagination>=0.15.1",
    "fsspec>=2025.12.0",
    # Storage adapters
    "s3fs>=2024.9.0",
    "aiobotocore>=2.13.0",
    "webdav4>=0.9.8",
    "universal-pathlib>=0.2.0",
    "cryptography>=42.0.0",
    "uuid-utils>=0.12.0",
    "jieba>=0.42.1",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "deepagents>=0.3.0",
    "qrcode>=8.2",
]

[project.optional-dependencies]
dev = ["djlint==1.36.4"]  # HTML/Jinja linter for templates

[dependency-groups]
dev = [
    "ruff>=0.8.0",  # All-in-one linter & formatter (replaces black, isort, flake8)
    "aiosqlite>=0.22.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",  # Dependency security audit
    "types-requests>=2.31.0",
    "types-python-dateutil>=2.8.0",
    "types-aiofiles>=23.2.0",
    "pytest-asyncio>=1.3.0",
    "pyright>=1.1.407",
]
test = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.92.0",
]
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_optional = true
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin"
]

# Suppress error codes that are genuinely outside our control (third-party)
disable_error_code = [
    "import-untyped",
]
exclude = ["migrations", "venv", "tests", "alembic", "app/skills"]
explicit_package_bases = true

# Per-module overrides for third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_core.*",
    "langchain_openai.*",
    "langchain_community.*",
    "langgraph.*",
    "langgraph_checkpoint_postgres.*",
    "fastapi_pagination.*",
    "mem0.*",
    "slowapi.*",
    "structlog.*",
    "jieba.*",
    "duckduckgo_search.*",
    "ddgs.*",
    "yaml.*",
    "fsspec.*",
    "s3fs.*",
    "webdavfs.*",
    "upath.*",
]
ignore_errors = true

# SQLAlchemy and SQLModel have native type support in 2.0+
[[tool.mypy.overrides]]
module = ["sqlalchemy.*", "sqlmodel.*"]
ignore_missing_imports = true

# SQLModel ORM query compatibility: disable ORM-related type errors
# This is a known limitation of SQLModel's type system with Mypy.
# SQLModel uses runtime metaclass magic to convert Python types to SQL columns,
# but Mypy cannot understand this transformation statically.
# See: https://github.com/tiangolo/sqlmodel/issues
#
# Affected error codes:
# - arg-type: Model.field passed to where(), order_by(), select()
# - attr-defined: Model.field.desc(), Model.field.asc() not recognized
# - union-attr: Optional field .in_() not recognized
# - list-item: [Model.field == value] as list[ColumnElement] fails
# - call-overload: select(Model.field) overload mismatch
[[tool.mypy.overrides]]
module = ["app.services.*", "app.core.*", "app.api.*", "app.skills.*"]
disable_error_code = ["arg-type", "attr-defined", "union-attr", "list-item", "call-overload", "assignment"]

# Utils layer: stricter checking, only disable arg-type for ORM queries
[[tool.mypy.overrides]]
module = ["app.utils.*"]
disable_error_code = ["arg-type", "call-overload"]

# Skills scripts with non-standard directory names (contain hyphens)
# These cannot be matched with standard module patterns
[[tool.mypy.overrides]]
module = ["app.skills.shared-space.*", "app.skills.budget-planner.*", "app.skills.cashflow-analyst.*", "app.skills.financial-forecaster.*", "app.skills.spending-analyzer.*", "app.skills.transfer-expert.*"]
ignore_errors = true

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
exclude = ["**/migrations", "**/tests", "**/alembic", "**/venv"]
reportMissingImports = false
reportMissingTypeStubs = false


[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# NOTE: black, flake8, isort configurations removed - now using Ruff for all

[tool.pylint."messages control"]
disable = [
    "line-too-long",
    "trailing-whitespace",
    "missing-function-docstring",
    "consider-using-f-string",
    "import-error",
    "too-few-public-methods",
    "redefined-outer-name",
]

[tool.pylint.master]
ignore = "migrations"

[tool.ruff]
line-length = 119
exclude = ["migrations", "*.ipynb", "venv", ".venv", "alembic"]
target-version = "py313"

[tool.ruff.format]
# Formatting options (replaces Black)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
# Enable rules:
# E/W: pycodestyle (errors/warnings)
# F: Pyflakes
# B: flake8-bugbear
# I: isort (import sorting)
# ERA: eradicate (commented-out code)
# D: pydocstyle (docstrings)
select = ["E", "W", "F", "B", "I", "ERA", "D"]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "F401",   # Unused imports (sometimes intentional for __init__.py)
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D205",   # 1 blank line required between summary and description (too strict)
    "D213",   # Multi-line docstring summary should start at the second line (conflicts with D212)
    "D415",   # First line should end with period/question mark (not suitable for Chinese)
    "B904",   # Within an except clause, raise exceptions with `raise ... from err`
    "B008",   # Do not perform function calls in argument defaults
]

# Don't auto-fix these rules
unfixable = ["B"]

[tool.ruff.lint.isort]
# Import sorting options (replaces isort)
force-wrap-aliases = true
combine-as-imports = true
force-single-line = false
known-first-party = ["app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Ignore import violations in __init__.py files
"__init__.py" = ["E402", "F401"]
# Ignore docstring requirements in tests
"tests/**/*.py" = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]
# Ignore some rules in migration scripts
"alembic/**/*.py" = ["D", "ERA001"]
