[project]
name = "augo-api"
version = "0.1.0"
description = "Augo: Self-Hosted & Privacy-First AI Financial Assistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "langchain>=1.0.5",
    "langchain-core>=1.2.5",
    "langchain-openai>=1.0.2",
    "langfuse==3.9.1",
    "langgraph>=1.0.2",
    "langgraph-checkpoint-postgres>=3.0.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.1",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
    "structlog>=25.2.0",
    "supabase>=2.15.0",
    "uvicorn>=0.34.0",
    "bcrypt>=4.3.0",
    "slowapi>=0.1.9",
    "email-validator>=2.2.0",
    "prometheus-client>=0.19.0",
    "starlette-prometheus>=0.7.0",
    "asgiref>=3.8.1",
    "duckduckgo-search>=3.9.0",
    "langchain-community>=0.4.1",
    "tqdm>=4.67.1",
    "colorama>=0.4.6",
    "ddgs>=9.6.0",
    "tenacity>=9.1.2",
    "mem0ai>=1.0.0",
    "uvloop>=0.22.1",
    "alembic>=1.13.0",
    "pillow>=10.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "apscheduler>=3.10.0",
    "python-dateutil>=2.8.2",
    "aiofiles>=23.2.1",
    "sqlalchemy[asyncio]>=2.0.40",
    "multidict==6.7.0",
    "fastapi-pagination>=0.15.1",
    "fsspec>=2025.12.0",
    "s3fs>=2024.9.0",
    "aiobotocore>=2.13.0",
    "webdav4>=0.9.8",
    "universal-pathlib>=0.2.0",
    "cryptography>=42.0.0",
    "uuid-utils>=0.12.0",
    "jieba>=0.42.1",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "deepagents>=0.3.0",
    "qrcode>=8.2",
]

[project.optional-dependencies]
dev = ["djlint==1.36.4"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "aiosqlite>=0.22.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    "types-requests>=2.31.0",
    "types-python-dateutil>=2.8.0",
    "types-aiofiles>=23.2.0",
    "pytest-asyncio>=1.3.0",
    "pre-commit>=4.0.0",
    "radon>=6.0.0",
    "types-pyyaml>=6.0.12.20250915",
]
test = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.92.0",
]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["venv", ".venv", "venv_test", "alembic/versions"]
# 禁用第三方库装饰器的类型检查错误
disable_error_code = ["untyped-decorator"]

# Third-party libraries - 使用精细化配置而不是 ignore_errors
# 只忽略真正没有类型支持的库的导入错误
[[tool.mypy.overrides]]
module = [
    "jieba.*",             # 无类型支持
    "ddgs.*",              # 无类型支持
    "duckduckgo_search.*", # 无类型支持
    "yaml.*",              # PyYAML 类型支持不完整
    "aiofiles.*",          # aiofiles 类型存根不完整
    "dateutil.*",          # dateutil 类型存根不完整
]
ignore_missing_imports = true

# LangChain 系列 - 有类型但不够严格，放宽要求但不完全忽略
[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_core.*",
    "langchain_openai.*",
    "langchain_community.*",
    "langgraph.*",
    "langgraph_checkpoint_postgres.*",
]
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_return_any = false

# 其他第三方库 - 部分类型支持
[[tool.mypy.overrides]]
module = [
    "fastapi_pagination.*",
    "mem0.*",
    "slowapi.*",
    "structlog.*",
    "fsspec.*",
    "s3fs.*",
    "webdavfs.*",
    "upath.*",
]
disallow_untyped_defs = false
warn_return_any = false

# 对测试代码放宽要求
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

# 对评估代码放宽要求
[[tool.mypy.overrides]]
module = ["evals.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

# 对 alembic 配置放宽要求
[[tool.mypy.overrides]]
module = ["alembic.env"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 119
target-version = "py313"
exclude = ["migrations", "*.ipynb", "venv", ".venv", "alembic"]

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I", "ERA", "D", "UP"]
ignore = [
    "E501",
    "F401",
    "D100",
    "D104",
    "D107",
    "D203",
    "D205",
    "D213",
    "D415",
    "D101",
    "D102",
    "D103",
    "D105",
    "D106",
    "B904",
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"tests/**/*.py" = ["D"]
"alembic/**/*.py" = ["D", "ERA001"]

[tool.bandit]
exclude_dirs = ["tests", "alembic", "venv", ".venv"]
skips = ["B101", "B311"]
